# x1

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/single_token_tools/: README.md  example.json  token_level.py
datasets/: README.md  benchmarking.PrOntoQA.json.bz2  benchmarking.SAT.json.bz2  benchmarking.einstein.json.bz2  benchmarking.knapsack.json.bz2
examples/: README.md  SAT_dataset.json  example_benchmark.py  example_mcts.py  example_prompted_mcts.py  example_synthetic_dataset_generation.py  example_synthetic_generation.py
x1/benchmarking/: README.md  __init__.py  abstract_extractor.py  abstract_generator.py  benchmark.py  extractor.py  generator.py  math_verifier.py  utils.py
x1/evaluation/: README.md  __init__.py  abstract_step_evaluation.py  prompted_step_evaluation.py  value_model.py
x1/expansion/: README.md  __init__.py  abstract_step_expansion.py  policy_model.py  prompted_step_expansion.py
x1/server/: README.md  __init__.py  utils.py
x1/server/policy_server/: __init__.py  abstract_policy_model.py  config.py  policy_data_loader.py  policy_model.py  policy_trainer.py  routes.py  wsgi.py
x1/server/value_server/: __init__.py  abstract_value_model.py  config.py  routes.py  value_data_loader.py  value_model.py  value_trainer.py  wsgi.py
x1/strategy/: README.md  __init__.py  mcts.py  utils.py
x1/synthetic_generation/: README.md  __init__.py  abstract_generator.py  abstract_verifier.py  einstein.py  knapsack.py  prontoqa.py  sat.py
x1/synthetic_generation/PrOntoQA/: __init__.py  fol.py  prompt.py  proof.py  run_experiment.py  syntax.py  (+1 more)
(+11 files in other folders)
